--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,15 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Greg Wiedeman
+author: Gregory Wiedeman
+email: gwiedeman@albany.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  I'm an archivist who works to make information more accessible.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: gregwiedeman
+github_username:  gwiedeman
 
 # Build settings
 #theme: minima
@@ -80,3 +79,12 @@ defaults:
       path: ""
     values:
       layout: "default"
+  - scope:
+      path: ""
+    values:
+      background: '/images/2019-04-25_13-04-26-0.JPG'
+  - scope:
+      path: "/presentations"
+    values:
+      background: '/images/2019-04-25 12-50-04-0.JPG'
+      #background: '/images/2019-04-23 15-26-16-0.JPG'
