--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ defaults:
     values:
       background: '/images/2019-04-25_13-04-26-0.JPG'
   - scope:
-      path: "/presentations"
+      path: "code"
     values:
       background: '/images/2019-04-25 12-50-04-0.JPG'
       #background: '/images/2019-04-23 15-26-16-0.JPG'
