changed config im not sure why its not building

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ email: gwiedeman@albany.edu
 description: >- # this means to ignore newlines until "baseurl:"
   I'm an archivist who works to make information more accessible.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://www.gregwiedeman.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: gregwiedeman
 github_username:  gwiedeman
 
